--- a/style.css
+++ b/style.css
@@ -307,7 +307,11 @@ ul.header-menu {
   height: 90%;
   margin: 40px;
   overflow: hidden;
+  transition: right 0.4s ease-in-out;
 }
+
+
+
 
 .modal:target {
   right: 0;
@@ -387,11 +391,11 @@ ul.header-menu {
   color: #fff;
   font-weight: bold;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .close-button:hover {
-  transform: rotate(180deg);
+  transform: rotate(90deg);
 }
 
 .modal img {
@@ -427,6 +431,9 @@ ul.header-menu {
   font-weight: 200;
 }
 
+.modal-menu {
+  display: none;
+}
 .hem-serch i {
   position: absolute;
   cursor: pointer;
@@ -472,6 +479,7 @@ ul.header-menu {
   justify-content: center;
   width: 38px;
   height: 38px;
+  gap: 2rem;
   border-radius: 50%;
   background-color: rgba(38, 87, 96, 0.3);
   font-size: 16px;
@@ -533,11 +541,14 @@ ul.header-menu {
     display: none;
   }
   .modal{
-    margin-top: 40px;
-    margin-right: 20px;
+    margin-top: 30px;
+    margin-right: 6px;
   }
   .modal-content p,h5,input,.hem-serch i{
     display: none;
+  }
+  .header-menu{
+    display: block;
   }
   
 }
