--- a/style.css
+++ b/style.css
@@ -597,9 +597,12 @@ ul.header-menu {
   .accordion-icon {
     transition: transform 0.3s ease;
   }
+
   /* Hide content by default */
   .accordion-content {
     max-height: 0;
+    font-size: 16px;
+    font-weight: 600;
     overflow: hidden;
     list-style: none;
     transition: max-height 0.4s ease;
@@ -640,14 +643,129 @@ ul.header-menu {
     text-decoration: none;
   }
 
-  .contect-item{
-    padding-left:20px ;
-  }
-  .ham-footer{
+  .contect-item {
     padding-left: 20px;
   }
 
+  .ham-footer {
+    padding-left: 20px;
+  }
+}
+
+
+/* ========================= secand ========================= */
+.secand {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 2rem;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+.secand-1 {
+  width: 100%;
+  background: #0D1D1D;
+  color: #A9B8B8;
+  border-radius: 12px;
+}
+.secand-1-top svg{
+   width:30px ;
+   height: 30px;
+   /* background: #000; */
+   color: #fff;
+}
+
+.secand-2 {
+  width: 100%;
+  position: relative;
+
+}
+
+.secand-2 img {
+  width: 100%;
+  height: 600px;
+  border-radius: 1.5rem;
+}
+
+.secand-2-ph {
+  height: 250px;
+  background: #fff;
+  padding: 30px 25px;
+
+  border-radius: 12px;
+  /* border: 1.7rem solid #ecf0f0; */
 
 
 
+}
+
+.border-top-right {
+  background-color: #ecf0f0;
+  border-top: 15px solid #ecf0f0;
+  border-right: 15px solid #ecf0f0;
+  border-top-right-radius: 10px;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+}
+
+.secand-2-ph img {
+  width: fit-content;
+  height: 50px;
+
+}
+
+.images-2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.image-icon{
+  width:50px ;
+  height: 50px;
+  background: #1e8a8a;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.secand-2-ph h2 {
+  font-size: 50px;
+  margin-bottom: 15px;
+}
+
+.secand-2-ph p {
+  font-size: 18px;
+  color: #567373;
+}
+
+.secand-2-ph ::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -27px;
+  width: 13px;
+  height: 13px;
+  transform: rotate(-90deg);
+  z-index: 10000;
+  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D'0%200%2011%2011'%20fill%3D'none'%20xmlns%3D'http%3A//www.w3.org/2000/svg'%3E%3Cpath%20d%3D'M11%200L0%200V11C0%204.92487%204.92487%200%2011%200Z'%20fill%3D'%23ecf0f0'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.secand-2-ph::before {
+  content: "";
+  position: absolute;
+  right: -28px;
+  bottom: 0;
+  width: 13px;
+  height: 13px;
+  transform: rotate(-90deg);
+  z-index: 10000;
+  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D'0%200%2011%2011'%20fill%3D'none'%20xmlns%3D'http%3A//www.w3.org/2000/svg'%3E%3Cpath%20d%3D'M11%200L0%200V11C0%204.92487%204.92487%200%2011%200Z'%20fill%3D'%23ecf0f0'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
