--- a/style.css
+++ b/style.css
@@ -746,7 +746,6 @@ ul.header-menu {
 .secand-2 {
   width: 100%;
   position: relative;
-
 }
 
 .secand-2 img {
@@ -1164,22 +1163,22 @@ ul.header-menu {
   margin: 0 45px;
   padding: 0 10px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 15px;
   height: auto;
 }
 
 .row-1 {
   width: 100%;
   position: relative;
-
+  order: 2;
 }
 
 
 .row-1 img {
   width: 100%;
-  height: 600px;
+  max-height: 680px;
+  height: 100%;
   border-radius: 1.5rem;
 }
 
@@ -1260,14 +1259,20 @@ ul.header-menu {
 
 
 .row-2 {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 8px;*/
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-rows: repeat(2, 1fr); */
+  gap: 15px;
+  order: 1;
 }
 
 .div1 {
+  grid-column: span 3 / span 3;
   width: 100%;
   padding: 30px;
   height: auto;
@@ -1275,40 +1280,43 @@ ul.header-menu {
   border-radius: 9px;
 }
 
-.row-2-hedar {
+/* .row-2-hedar {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
+  gap: 15px;
+} */
 
-}
-
-.row-2-hedar .div2 {
-  width: 100%;
+.div2 {
   padding: 30px;
-  height: auto;
+  /* height: auto; */
   background: #1e8a8a;
   border-radius: 9px;
+  grid-column: span 2 / span 2;
+  grid-row-start: 2;
 }
 
-.row-2-hedar .div3 {
-  width: 100%;
+.div3 {
   position: relative;
+  /* height: 100%; */
+  grid-column-start: 3;
+  grid-row-start: 2;
 
 }
 
 .div3 img {
   width: 100%;
   border-radius: 9px;
-
+  height: 100%;
+  object-fit: cover;
 }
 
 .div1 .div1-hedar-1 {
   display: flex;
   align-items: center;
   /* justify-content: center; */
-  border: 1.5px dotted #b8bec1;
+  border: 1.5px dotted #1e8a8a;
   padding: 2px 10px;
   text-align: justify;
   gap: 14px;
@@ -1477,6 +1485,7 @@ ul.header-menu {
   position: absolute;
   left: 50%;
   top: 50%;
+  cursor: pointer;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -1487,4 +1496,50 @@ ul.header-menu {
   backdrop-filter: blur(8px);
 }
 
+/* ==========================media query============================== */
 
+
+@media (max-width: 480px) {
+  .div1 h2 {
+    font-size: 25px;
+    font-weight: 500;
+  }
+}
+
+@media (max-width: 768px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+
+  .div1 h2 {
+    font-size: 48px;
+    font-weight: 500;
+  }
+
+  .servise {
+    padding: 80px 0;
+  }
+
+  .row-2-ph {
+    height: 250px;
+    background: #fff;
+    padding: 25px 18px 20px 18px;
+    
+    
+  }
+
+  .row-2-ph h2{
+    font-size: 40px;
+    font-weight: 600;
+    padding-bottom: 10px;
+    padding-top: 20px;
+  }
+
+  .row-2-ph p{
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
