--- a/style.css
+++ b/style.css
@@ -1946,14 +1946,18 @@ ul.header-menu {
 
 /* ========================== portfolio style ============================== */
 
-.portfolio{
+.portfolio {
   padding-bottom: 120px;
-  padding-top: 120px;
+  /* padding-top: 120px; */
 }
-.portfolio-main{
-  margin-left:30px ;
-  margin-right: 30px;
+
+.portfolio-main {
+  /* margin-left: 40px;
+  margin-right: 40px; */
+  padding-left: 12px;
+  padding-right: 12px;
 }
+
 .portfolio-m-text .portfolio-hedar-1 {
   display: flex;
   align-items: center;
@@ -1967,24 +1971,34 @@ ul.header-menu {
 
 }
 
-.portfolio-m-text svg{
+.portfolio-m-text svg {
   width: 25px;
   height: 23px;
 }
 
-.div1-hedar-1 h3 {
+.portfolio-hedar-1 h3 {
   font-size: 20px;
   font-weight: 300;
+}
+
+.portfolio-hedar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: center; */
+  justify-content: space-between;
 }
 
 .portfolio-m-text h2 {
   font-size: 48px;
   font-weight: 500;
-  /* margin-bottom: 20px; */
+  margin-bottom: 20px;
 }
+
 .portfolio-m-text p {
   font-size: 16px;
   font-weight: 400;
+  color: #364e52;
 
 }
 
@@ -1999,8 +2013,9 @@ ul.header-menu {
   justify-content: center;
   gap: 10px;
   padding: 5px 15px;
-  /* background: #1e8a8a; */
+  background: #1E8A8A;
   color: transparent;
+  /* hide original text */
   font-size: 16px;
   font-weight: 600;
   border: none;
@@ -2009,7 +2024,7 @@ ul.header-menu {
   transition: all 0.3s ease-in-out;
   text-transform: capitalize;
   overflow: hidden;
-  /* box-shadow: 0 8px 20px rgba(33, 139, 140, 0.25); */
+  box-shadow: 10px 10px 20px rgba(33, 139, 140, 0.25);
 }
 
 /* Original text (slides up on hover) */
@@ -2020,7 +2035,7 @@ ul.header-menu {
   top: 50%;
   transform: translateY(-50%);
   opacity: 1;
-  color: black;
+  color: white;
   font-weight: 600;
   font-size: 16px;
   white-space: nowrap;
@@ -2035,13 +2050,12 @@ ul.header-menu {
   top: 50%;
   transform: translateY(100%);
   opacity: 0;
-  color: black;
+  color: white;
   font-weight: 600;
   font-size: 16px;
   white-space: nowrap;
   transition: transform 0.4s ease, opacity 0.4s ease;
 }
-
 
 /* Hover effects */
 .portfolio-btn:hover::after {
@@ -2055,7 +2069,7 @@ ul.header-menu {
 }
 
 /* Arrow circle styling */
-.portfolio-btn.arew {
+.portfolio-btn .arew {
   display: inline-flex;
   background-color: #000;
   color: #fff;
@@ -2067,6 +2081,7 @@ ul.header-menu {
   transition: transform 0.3s ease;
 }
 
+
 .portfolio-btn .arew i {
   font-size: 16px;
   transform: rotate(-45deg);
@@ -2075,4 +2090,274 @@ ul.header-menu {
 
 .portfolio-btn:hover .arew i {
   transform: rotate(0deg);
+}
+
+
+.portfolio-m-img {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  grid-auto-rows: 450px;
+}
+
+.portfolio-div1 {
+  grid-column: span 3 / span 3;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.portfolio-div2 {
+  grid-column: span 2 / span 2;
+  grid-column-start: 4;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.portfolio-div3 {
+  grid-column: span 2 / span 2;
+  grid-row-start: 2;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.portfolio-div4 {
+  grid-column: span 3 / span 3;
+  grid-column-start: 3;
+  grid-row-start: 2;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.portfolio-m-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+  border-radius: 15px;  
+}
+
+.portfolio-m-img {
+  padding-top: 50px;
+}
+
+.portfolio-div1 img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease;
+}
+
+
+.portfolio-div2 img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease;
+}
+
+.portfolio-div3 img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease;
+}
+
+.portfolio-div4 img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease;
+}
+
+.portfolio-div1:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-div2:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-div3:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-div4:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-div1,
+.portfolio-div2,
+.portfolio-div3,
+.portfolio-div4:hover .portfolio-div-text {
+  opacity: 1;
+}
+
+/* Top label text */
+.connect {
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #00f0ff;
+  margin-bottom: 10px;
+}
+
+/* Bottom content */
+.txt-bottom h4 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.flet {
+  display: inline-flex;
+  background-color: #364e52a9;
+  color: #fff;
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
+}
+
+
+.flet i {
+  font-size: 16px;
+  transform: rotate(-45deg);
+  transition: transform 0.4s ease;
+}
+
+.bottom-flet:hover .flet i {
+  transform: rotate(0deg);
+  background-color: #1E8A8A;
+}
+
+.bottom-flet:hover .flet {
+  background-color: #1E8A8A;
+}
+
+.portfolio-div-text {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 25px 20px;
+}
+
+.txt-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.txt-bottom h4 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.connect {
+  border-radius: 7px;
+  background-color: transparent;
+  display: -webkit-inline-box;
+  backdrop-filter: blur(8px);
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  padding: 4px;
+}
+
+
+/* =================================== media query============================ */
+
+
+@media (max-width: 480px) {}
+
+@media (max-width: 768px) {
+  .portfolio-hedar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .portfolio-m-img {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .portfolio-div1,
+  .portfolio-div2,
+  .portfolio-div3,
+  .portfolio-div4 {
+    width: 100%;
+    height: auto;
+  }
+
+  .portfolio-div1 img,
+  .portfolio-div2 img,
+  .portfolio-div3 img,
+  .portfolio-div4 img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .portfolio-div-text {
+    padding: 20px 16px;
+  }
+
+  .txt-bottom h4 {
+    font-size: 18px;
+  }
+  .portfolio-m-img img {
+    width: 100%;
+    height: 350px;
+  }
+
+  .portfolio-main {
+    padding-top: 70px;
+  }
+
+  .txt-bottom h4 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .flet {
+    display: inline-flex;
+    background-color: #364e52a9;
+    color: #fff;
+    height: 55px;
+    width: 55px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+  }
+
+  .portfolio-m-text h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    text-align: justify;
+  }
+
+  .portfolio-m-text p {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 20px;
+  }
 }
